# rust-for-bitcoin-program

./: Capstone.md
eliptic_curve_math_engine/: Cargo.toml  README.md  my.md
eliptic_curve_math_engine/src/: lib.rs  main.rs
eliptic_curve_math_engine/src/cli/: handler.rs
eliptic_curve_math_engine/src/harold/: lib.rs
eliptic_curve_math_engine/src/keypair_deriv/: README.md  keypair.rs  mod.rs  private_key.rs  pubkey.rs
eliptic_curve_math_engine/src/point_arithmetic/: ec_point.rs  field_element.rs  jacobian_point.rs  mod.rs  readMe.md
